alignment fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -233,6 +233,7 @@ html {
 }
 
 .carousel-item img {
+  margin-top: 20%;
   width: 100%;
   height: 100vh;
   opacity: 0.8;
@@ -1115,7 +1116,7 @@ html {
   .work-desc--tittle h3 {
     font-size: 16px;
     font-weight: 300;
-    margin-left: -60px;
+    margin-left: -55px;
   }
 
   .work-desc--tittle h6 {
